<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/short1_dp"
    android:rowCount="6"
    android:columnCount="2"
    tools:context=".presentation.mvvm.ui.PisoFragment">

    <TextView
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:text="@string/tv_cinco"
        android:textStyle = "bold"
        style="@style/MyTitleAndResult" />

    <TextView
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/tv_seis"
        style="@style/MyTextView" />

    <EditText
        android:id="@+id/editM2DeCajaBaldosas"
        style="@style/MyEditText"
        android:layout_row="1"
        android:layout_column="1"
        android:autofillHints="username"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/tv_siete"
        style="@style/MyTextView" />
    <EditText
        android:id="@+id/editM2DeLaHabitacion"
        android:layout_column="1"
        android:layout_row="2"
        style="@style/MyEditText"
        android:autofillHints="username"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/tv_ocho"
        style="@style/MyTextView" />
    <EditText
        android:id="@+id/editBaldosasPorCaja"
        android:layout_column="1"
        android:layout_row="3"
        style="@style/MyEditText"
        android:autofillHints="username"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_row="4"
        android:layout_columnSpan="2"
        android:text="@string/button_calcular"
        style="@style/MyButton"/>

    <TextView
        android:id="@+id/result"
        android:layout_columnSpan="2"
        android:layout_row="5"
        style="@style/MyTitleAndResult"/>

</GridLayout>