<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/short1_dp"
    android:rowCount="7"
    android:columnCount="2"
    tools:context=".presentation.mvvm.ui.ParedFragment">

    <TextView
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:text="@string/tv_uno"
        android:textStyle = "bold"
        style="@style/MyTitleAndResult" />

    <TextView
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/tv_dos"
        style="@style/MyTextView" />

    <EditText
        android:id="@+id/editAltura"
        android:layout_column="1"
        android:layout_row="1"
        android:autofillHints="username"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck"
        style="@style/MyEditText" />

    <TextView
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/tv_tres"
        style="@style/MyTextView"/>

    <EditText
        android:id="@+id/editLargo"
        android:layout_column="1"
        android:layout_row="2"
        android:autofillHints="username"
        tools:ignore="LabelFor"
        style="@style/MyEditText" />

    <TextView
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/tv_cuatro"
        style="@style/MyTextView" />

    <EditText
        android:id="@+id/editEspesorJuntas"
        android:layout_column="1"
        android:layout_row="3"
        android:autofillHints="username"
        tools:ignore="LabelFor"
        style="@style/MyEditText" />

    <RadioGroup
        android:layout_column="0"
        android:layout_row="4"
        android:layout_marginTop="@dimen/short1_dp"
        android:layout_marginStart="@dimen/short2_dp"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbLadrillo"
            android:text="@string/rb_uno"
            style="@style/MyRadioButton"/>
        <RadioButton
            android:id="@+id/rbBloque"
            android:text="@string/rb_dos"
            style="@style/MyRadioButton"/>
    </RadioGroup>

    <RadioGroup
        android:layout_column="1"
        android:layout_row="4"
        android:layout_marginTop="@dimen/short1_dp"
        android:layout_marginEnd="@dimen/short2_dp"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbAparejoSoga"
            style="@style/MyRadioButton"
            android:text="@string/rb_tres"/>
        <RadioButton
            android:id="@+id/rbAparejoEspanol"
            style="@style/MyRadioButton"
            android:text="@string/rb_cuatro"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_columnSpan="2"
        android:layout_row="5"
        android:text="@string/button_calcular"
        style="@style/MyButton"/>

    <TextView
        android:id="@+id/result"
        android:layout_columnSpan="2"
        android:layout_row="6"
        style="@style/MyTitleAndResult"/>

</GridLayout>